# TPM_Sharing_Scheme

./: .gitignore  README.md
acs_routine/: Makefile.am  bootstrap.sh  config.ini  configure.ac  function_acsroutine.sh  launch_attestlog_AD.sh  readme.md  remove_acsroutine.sh  setup_acsroutine.sh
acs_routine/attestlog_AD/: Makefile.am  main.c
acs_routine/lib/: Makefile.am  lib_signal_handler.c  lib_signal_handler.h
acs_routine/traffic_AD/: Makefile.am  main.c  traffic.py
boot/: .gitignore  activate_swtpm.sh  config.ini  dir_list.txt  function_boot.sh  hash.sh  hashed_file_list.txt  launch_swtpm.sh  mbc_last.sh  potential_cmd.md  readme.md  remove.sh  remove_mbc_last.sh  remove_swtpm_daemon.sh  setup_mbc_last.sh  setup_swtpm_daemon.sh  test_hash.sh
boot/img/: measured_boot_chain.drawio
common/: config.ini  copy_VM.ps1  function.sh  function_common.sh  functions.sh  os_setup.md  readme.md  remove.sh  setup.sh  setup_repo.sh
deploy_repo/: .gitignore  config.ini  function_deploy_repo.sh  readme.md  remove.sh  setup.sh
device_util/: flame_graph.sh  pwm_fan_jetson.sh  readme.md  upgrade_jetson_20.md  ups_setup_jetson.sh  ups_waveshare_jetson.sh
device_util/upgrade_jetson_18/: readme.md  upgrade_jetson_1.sh  upgrade_jetson_2.sh  upgrade_jetson_3.sh  upgrade_jetson_4.sh
doc/: os_setup.md  sd_card_fix.md  tty_interface.md  update_log.md
doc/resources/: readme.md
doc/technology/: bash.md  docker.md  jetson_nano_hardware.md  os_setup.md  sd_card_fix.md  ssh_setup.md  tty_interface.md
install_log/: readme.md
post_boot/: readme.md
server_com/: config.ini  readme.md  setup.sh
server_com/client/: CMakeLists.txt  client.c
server_com/server/: CMakeLists.txt
setup_environment/: TPM-simulator_installation.sh  github-desktop_installation.sh  readme.md  setup_environment.sh  swtpm-emulator_installation.sh  swtpm-simulator_installation.sh  test.sh  test_commands.sh  tpm2-abrmd_installation.sh  tpm2-tools_installation.sh  tpm2-tss-engine_installation.sh  tpm2-tss_installation.sh
setup_environment/activate/: activate_swtpm_simulator.sh
setup_environment/installation/: TPM-simulator_installation.sh  github-desktop_installation.sh  setup_environment.sh  swtpm-simulator_installation.sh  test_commands.sh  tpm2-abrmd_installation.sh  tpm2-tools_installation.sh  tpm2-tss-engine_installation.sh  tpm2-tss_installation.sh
setup_environment/operation/: tpm2tss_swtpm_reset.sh  tpm2tss_swtpm_start.sh  tpm_daemen_killer.sh  tpm_daemen_starter.sh  tpm_switcher.sh
setup_ibmtpm/: config.ini  config.ini.template  config_RA_client.ini  config_RA_server.ini  config_dTPM_local.ini  config_vTPM_local.ini  copy_VM.ps1  error.md  function_ibmtpm.sh  install_ibmacs.sh  install_ibmswtpm.sh  install_ibmtpmtss.sh  install_req.sh  mysql.md  readme.md  remove.sh  setup.sh  setup_old.sh  setup_sudo.sh  test.sh
setup_ibmtpm/config_files/: config.ini.template  config_RA_client.ini  config_RA_client_launch.ini  config_RA_client_setup.ini  config_RA_server.ini  config_RA_server_launch.ini  config_RA_server_setup.ini  config_dTPM_local.ini  config_vTPM_local.ini
setup_optiga/: config.ini  function_optiga.sh  readme.md  remove.sh  setup.sh
setup_ros2/: Dockerfile  readme.md  run_docker_sub.sh  setup_docker.sh  setup_jetson.sh  upgrade_jetson_1.sh  upgrade_jetson_2.sh  upgrade_jetson_3.sh  upgrade_jetson_4.sh
setup_ros2/bin_ros_18/: setup_jetson.sh
setup_ros2/bin_ros_20/: .gitignore  build_ros.sh  car.cpp  common.sh  controller.cpp  dummy.cpp  execute_package.sh  execute_ros_package.sh  install_ros.sh  load_ros_env.sh  readme.md  remove_ros_package.sh  setup_ros_package.sh  uninstall_ros.sh
setup_ros2/bin_ros_20/img/: .$flow.drawio.bkp  flow.drawio
setup_ros2/demo_package/: build_ros_package.sh  dummy.cpp  execute_ros_package.sh  load_ros_env.sh  readme.md  remove_ros_package.sh  setup_ros_package.sh
setup_ros2/demo_package/img/: .$flow.drawio.dtmp
setup_ros2/pac_ros_22/: install_ros.sh  uninstall_ros.sh
setup_ros2/rolling_docker/: docker-compose.yml  run_docker_pub.sh  run_docker_sub.sh  setup_docker.sh
setup_ros2/src/: common.sh  execute_package.sh
setup_ros2/upgrade_jetson/: upgrade_jetson_1.sh  upgrade_jetson_2.sh
socket_com/: CMakeLists.txt  Doxyfile  config.ini  readme.md  setup.sh
socket_com/client/: CMakeLists.txt  client.c
socket_com/lib/: lib_system.c  lib_system.h  output_format.c  output_format.h  signal_handler.c  signal_handler.h
socket_com/server/: CMakeLists.txt  server.c  test_server.sh
update_swtpm/: config.ini  dependency.md  function_swtpm.sh  readme.md  remove_swtpm.sh  remove_swtpm_systemwide.sh  setup_swtpm.sh  setup_swtpm_isolated.sh
update_swtpm/backup/: function_swtpm.sh  remove_swtpm.sh  setup_swtpm.sh
update_swtpm/system-wide/: remove_swtpm.sh  setup_swtpm.sh
